В списке отображаем название объекта, see #60

--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -47,7 +47,8 @@
             <td>{$ph.ph_id}</td>
             <td>
                 {$ph.ph_title}
-                <span>{$ph.pc_title}</span>
+                <span class="photos-listitem-region">{$ph.pc_title}</span>
+                <span class="photos-listitem-object">{$ph.pt_name}</span>
             </td>
             <td>{$ph.ph_author}</td>
             <td>{$ph.ph_link}</td>
