--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -22,9 +22,19 @@
             <input type="hidden" id="photos-upload-bind-pgid" name="pgid" value="0" />
 
             <input type="text" id="photos-upload-bind-pc" value="" placeholder="регион" />
+            <input type="hidden" name="pcid_add" value="0" />
+            <input type="checkbox" id="photos-upload-bind-pc-bind"
+                   name="pcid_add"
+                   title="Прикрепить к странице региона"
+                   value="1" />
             <input type="button" id="photos-upload-bind-pc-clean" value="X" />
             &nbsp;&nbsp;&nbsp;&nbsp;
             <input type="text" id="photos-upload-bind-pt" value="" placeholder="объект" />
+            <input type="hidden" name="ptid_add" value="0" />
+            <input type="checkbox" id="photos-upload-bind-pt-bind"
+                   name="ptid_add"
+                   title="Прикрепить к странице объекта"
+                   value="1" />
             <input type="button" id="photos-upload-bind-pt-clean" value="X" />
         </div>
         <input type="submit" value="Загрузить" />
