--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -44,6 +44,8 @@
 
 <div id="photos-list" class="photos-block">
     <form action="" method="get">
+        <div class="photos-listpager">{$pager}</div>
+
         <table class="commontable">
             <tr>
                 <th>ID</th>
@@ -115,6 +117,8 @@
             </tr>
             {/foreach}
         </table>
+
+        <div class="photos-listpager">{$pager}</div>
     </form>
 </div>
 
