Редактирование фотографии, привязка к региону и объекту, see #60

--- a/css/admin/photos.css
+++ b/css/admin/photos.css
@@ -34,3 +34,12 @@
     font-size: 80%;
     color: #880088;
 }
+
+#photos-item {
+    position: relative;
+}
+#photos-item-img {
+    position: absolute;
+    left: 600px;
+    max-width: 300px;
+}
