--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -12,8 +12,13 @@
         <input type="text" id="flickr-import-city" value="" placeholder="регион" />
         <input type="hidden" id="flickr-import-photo-id" value="0" />
         <input type="hidden" id="flickr-import-city-id" value="0" />
-        <input type="button" id="flickr-import-save" value="Сохранить" />
         <input type="button" id="flickr-import-save-clean" value="X" />
+        <br /><br />
+        <label>
+            <input type="checkbox" id="flickr-import-city-bind" checked="checked" />
+            привязать к странице региона
+        </label>
+        <input type="button" id="flickr-import-save" value="Сохранить" />
     </div>
 
 </div>
