Указал путь с протоколом для статики Яндекса

--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -75,7 +75,7 @@
 <input type="hidden" id="pan_ne_lon" value="{$object.sw_ne.ne.lon}" />
 {/if}
 <div style="height:25px;overflow:hidden;margin: 10px;">
-    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8" defer="defer"></script>
+    <script type="text/javascript" src="https://yandex.st/share/share.js" charset="utf-8" defer="defer"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus"></div> 
 </div>
 
