--- a/templates/map/map.sm.html
+++ b/templates/map/map.sm.html
@@ -3,6 +3,6 @@
 <div id="mapstat">Отображается точек: <span id="mapdata_points">0</span></div>
 
 <div style="height:25px;overflow:hidden;margin: 10px;">
-    <script type="text/javascript" src="//yandex.st/share/share.js" defer="defer" charset="utf-8"></script>
+    <script type="text/javascript" src="https://yandex.st/share/share.js" defer="defer" charset="utf-8"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus"></div> 
 </div>
