--- a/templates/_admin/admpage.sm.html
+++ b/templates/_admin/admpage.sm.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{$title}</title>
+        <meta name="robots" content="noindex, nofollow" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/css/admin.css" type="text/css" />
         <script type="text/javascript" src="/addons/jquery/jquery.2.1.3.min.js"></script>
