--- a/css/common-layout.css
+++ b/css/common-layout.css
@@ -95,6 +95,11 @@ ul.menu_common li {
     list-style:none;
     display:inline;
 }
+@font-face {
+    font-family: "Marianna";
+    src: url("/img/fonts/marianna.ttf")
+}
+
 
 
 /* Header
@@ -180,6 +185,27 @@ ul.menu_common li {
     left:0;
     margin: 0; 
     height: 24px; 
+}
+
+#header-slogan {
+    position: absolute;
+    right: 0;
+    top: 70px;
+    width: 410px;
+    height: 70px;
+    font-family: 'Marianna', Times;
+    text-align: center;
+    font-size: 40px;
+    color: #0e506e;
+    background:rgba(255,255,255,0.5);
+
+    -moz-box-shadow: 0px 0px 20px #fff;
+    -webkit-box-shadow: 0px 0px 20px #fff;
+    box-shadow: 0px 0px 20px #fff;
+
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
 }
 
 
