Поправил ссылки на корень блога

--- a/templates/blog/blog.calendar.sm.html
+++ b/templates/blog/blog.calendar.sm.html
@@ -7,45 +7,47 @@
 -->
 <h2>Календарь {$cur_year}</h2>
 {if $entries}
-{foreach from=$entries item=inmonth key=mon}
-<h3 class="blog_calmonth" style="margin-top:20px;">
-    {if $mon == 1}
-    <a href="/blog/{$cur_year}/{$mon}/">Январь</a>
-    {elseif $mon == 2}
-    <a href="/blog/{$cur_year}/{$mon}/">Февраль</a>
-    {elseif $mon == 3}
-    <a href="/blog/{$cur_year}/{$mon}/">Март</a>
-    {elseif $mon == 4}
-    <a href="/blog/{$cur_year}/{$mon}/">Апрель</a>
-    {elseif $mon == 5}
-    <a href="/blog/{$cur_year}/{$mon}/">Май</a>
-    {elseif $mon == 6}
-    <a href="/blog/{$cur_year}/{$mon}/">Июнь</a>
-    {elseif $mon == 7}
-    <a href="/blog/{$cur_year}/{$mon}/">Июль</a>
-    {elseif $mon == 8}
-    <a href="/blog/{$cur_year}/{$mon}/">Август</a>
-    {elseif $mon == 9}
-    <a href="/blog/{$cur_year}/{$mon}/">Сентябрь</a>
-    {elseif $mon == 10}
-    <a href="/blog/{$cur_year}/{$mon}/">Октябрь</a>
-    {elseif $mon == 11}
-    <a href="/blog/{$cur_year}/{$mon}/">Ноябрь</a>
-    {elseif $mon == 12}
-    <a href="/blog/{$cur_year}/{$mon}/">Декабрь</a>
-    {/if}
-</h3>
-{foreach from=$inmonth key=beid item=entry}
-<div class="blog_record">
-    <h4 class="blog_title"><a href="/blog/{$entry.bg_year}/{$entry.bg_month}/{$entry.bg_day}.html">{$entry.br_title}</a></h4>
-    <div class="blog_attrs" style="margin-top:1px;">
-        <img src="/img/ico/ico.calendar.gif" class="textmarker" />&nbsp;{$entry.br_datex}</div>
-    {$entry.br_text}
-</div>
-{/foreach}
-{/foreach}
+    {foreach from=$entries item=inmonth key=mon}
+        <h3 class="blog_calmonth" style="margin-top:20px;">
+            {if $mon == 1}
+                <a href="/blog/{$cur_year}/{$mon}/">Январь</a>
+            {elseif $mon == 2}
+                <a href="/blog/{$cur_year}/{$mon}/">Февраль</a>
+            {elseif $mon == 3}
+                <a href="/blog/{$cur_year}/{$mon}/">Март</a>
+            {elseif $mon == 4}
+                <a href="/blog/{$cur_year}/{$mon}/">Апрель</a>
+            {elseif $mon == 5}
+                <a href="/blog/{$cur_year}/{$mon}/">Май</a>
+            {elseif $mon == 6}
+                <a href="/blog/{$cur_year}/{$mon}/">Июнь</a>
+            {elseif $mon == 7}
+                <a href="/blog/{$cur_year}/{$mon}/">Июль</a>
+            {elseif $mon == 8}
+                <a href="/blog/{$cur_year}/{$mon}/">Август</a>
+            {elseif $mon == 9}
+                <a href="/blog/{$cur_year}/{$mon}/">Сентябрь</a>
+            {elseif $mon == 10}
+                <a href="/blog/{$cur_year}/{$mon}/">Октябрь</a>
+            {elseif $mon == 11}
+                <a href="/blog/{$cur_year}/{$mon}/">Ноябрь</a>
+            {elseif $mon == 12}
+                <a href="/blog/{$cur_year}/{$mon}/">Декабрь</a>
+            {/if}
+        </h3>
+        {foreach from=$inmonth key=beid item=entry}
+            <div class="blog_record">
+                <h4 class="blog_title">
+                    <a href="/blog/{$entry.bg_year}/{$entry.bg_month}/{$entry.bg_day}.html">{$entry.br_title}</a>
+                </h4>
+                <div class="blog_attrs" style="margin-top:1px;">
+                    <img src="/img/ico/ico.calendar.gif" class="textmarker"/>&nbsp;{$entry.br_datex}</div>
+                {$entry.br_text}
+            </div>
+        {/foreach}
+    {/foreach}
 {else}
-<div class="blog_record">
-    Извините, записей нет. <a href="blog/">Вернуться</a>
-</div>
+    <div class="blog_record">
+        Извините, записей нет. <a href="/blog/">Вернуться</a>.
+    </div>
 {/if}
