--- a/templates/blog/blog.one.sm.html
+++ b/templates/blog/blog.one.sm.html
@@ -6,6 +6,11 @@
     </div>
     {$entry.br_text}
 </div>
+
 <div class="relap-content-blog"></div>
 
-<p>Перейти: <a href="/blog/{$entry.bg_year}/">этот год</a>, <a href="/blog/{$entry.bg_year}/{$entry.bg_month}/">этот месяц</a></p>
+<p>
+    Перейти:
+    <a href="/blog/{$entry.bg_year}/">этот год</a>,
+    <a href="/blog/{$entry.bg_year}/{$entry.bg_month}/">этот месяц</a>
+</p>
