--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
         <script type="text/javascript" src="https://relap.io/api/v6/head.js?token=bcuyS0TAMs8ykpeS" async></script>
         <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
+        <script type="text/javascript" src="https://cdn.ravenjs.com/3.8.0/raven.min.js" defer="defer"></script>
         {if $page->user.userid}
             <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
             <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
