Добавил reCaptcha на форму добавления точек

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -26,6 +26,7 @@
         <!--[if lt IE 9]>
         <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
         <![endif]-->
+        <script src='https://www.google.com/recaptcha/api.js'></script>
         <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat"
                 defer="defer"></script>
         <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
