Добавил обработчик рекапчи

--- a/templates/feedback/addpoint.sm.html
+++ b/templates/feedback/addpoint.sm.html
@@ -47,6 +47,7 @@
                 <input type="submit"
                        class="bigbutton g-recaptcha"
                        data-sitekey="{$recaptcha_key}"
+                       data-callback="reCaptchaCallback"
                        value="Отправить" />
             </td>
         </tr>
