Ссылка нп пользовательское соглашение

--- a/templates/feedback/addpoint.sm.html
+++ b/templates/feedback/addpoint.sm.html
@@ -54,3 +54,8 @@
     </table>
 
 </form>
+
+<p>
+    Нажимая кнопку &laquo;Отправить&raquo;, вы соглашаетесь со всеми пунктами
+    <a href="/about/">&laquo;Пользовательского соглашения&raquo;</a>.
+</p>
