--- a/templates/feedback/feedpage.sm.html
+++ b/templates/feedback/feedpage.sm.html
@@ -55,3 +55,8 @@
         </tr>
     </table>
 </form>
+
+<p>
+    Нажимая кнопку &laquo;Отправить&raquo;, вы соглашаетесь со всеми пунктами
+    <a href="/about/">&laquo;Пользовательского соглашения&raquo;</a>.
+</p>
