--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -10,6 +10,7 @@
         <meta name="description" content="{$page->description|escape:"html"}"/>
         <meta property="fb:pages" content="251308854921643" />
         <meta property="fb:admins" content="787133747" />
+        <meta property="fb:app_id" content="345000545624253"/>
         {foreach from=$page->getCustomMetas() key=property item=content}
             <meta property="{$property}" content="{$content|truncate:800:"…"}"/>
         {/foreach}
