В шаблоне обратной связи отключаем автокомплит

--- a/templates/feedback/addpoint.sm.html
+++ b/templates/feedback/addpoint.sm.html
@@ -1,7 +1,8 @@
 <h3>Добавление объекта</h3>
 <p>
     Если вы считаете, что на сайте не хватает какого-либо объекта, просто заполните форму и нажмите "Отправить".
-    В качестве объекта может выступать музей, памятник, парк или какое-либо ещё интересное для туристов место. Также мы всегда рады появлению на сайте новых сведений о кафе и гостиницах в вашем городе.
+    В качестве объекта может выступать музей, памятник, парк или какое-либо ещё интересное для туристов место. Также мы
+    всегда рады появлению на сайте новых сведений о кафе и гостиницах в вашем городе.
 </p>
 <p>Если хотите, чтоб с вами связались, оставьте свои контактные данные.
     Они не будут опубликованы или использованы в других целях, кроме связи с вами.
@@ -10,37 +11,70 @@
     <table class="addpoint-formtable m_clear">
         <tr>
             <td>Наименование</td>
-            <td colspan="3"><input type="text" name="title" value="" class="m_width_full m_highter" /></td>
+            <td colspan="3">
+                <input type="text" name="title" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td colspan="2">Местонахождение (город, регион или страна)</td>
-            <td colspan="2"><input type="text" name="region" value="" class="m_width_full m_highter" /></td>
+            <td colspan="2">
+                <input type="text" name="region" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td colspan="4">
-                Описание:<br/>
+                Описание:
+                <br/>
                 <textarea name="descr" class="addpoint-textarea m_width_full"></textarea>
             </td>
         </tr>
         <tr>
             <td>Адрес</td>
-            <td colspan="3"><input type="text" name="addrs" value="" class="m_width_full m_highter" /></td>
+            <td colspan="3">
+                <input type="text" name="addrs" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td>Телефон</td>
-            <td><input type="tel" name="phone" value="" class="m_width_full m_highter" /></td>
+            <td>
+                <input type="tel" name="phone" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
             <td>Сайт</td>
-            <td><input type="text" name="web" value="" class="m_width_full m_highter" /></td>
+            <td>
+                <input type="text" name="web" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td>График работы</td>
-            <td colspan="3"><input type="text" name="worktime" value="" class="m_width_full m_highter" /></td>
+            <td colspan="3">
+                <input type="text" name="worktime" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td>Ваше имя</td>
-            <td><input type="text" name="name" value="" class="m_width_full m_highter" /></td>
+            <td>
+                <input type="text" name="name" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
             <td>Эл. адрес</td>
-            <td><input type="email" name="email" value="" class="m_width_full m_highter" /></td>
+            <td>
+                <input type="email" name="email" value=""
+                       autocomplete="off"
+                       class="m_width_full m_highter" />
+            </td>
         </tr>
         <tr>
             <td colspan="4" class="m_center">
@@ -48,7 +82,7 @@
                        class="bigbutton g-recaptcha"
                        data-sitekey="{$recaptcha_key}"
                        data-callback="reCaptchaCallback"
-                       value="Отправить" />
+                       value="Отправить"/>
             </td>
         </tr>
     </table>
