--- a/templates/feedback/feedpage.sm.html
+++ b/templates/feedback/feedpage.sm.html
@@ -9,48 +9,85 @@
         <tr>
             <td style="width:20%"><label for="fname">Ваше имя</label></td>
             <td colspan="3">
-                <input type="text" id="fname" name="fname" class="feedinput" value="{$fname}" placeholder="Иван Иванов" style="width:98%" />
-                {if $error=='fname'}<span class="feedhighlight">Вы не ввели имя</span>{/if}
+                <input type="text" id="fname" name="fname"
+                       class="feedinput"
+                       value="{$fname}"
+                       placeholder="Иван Иванов"
+                       autocomplete="off"
+                       style="width:98%" />
+                {if $error=='fname'}
+                <span class="feedhighlight">Вы не ввели имя</span>
+                {/if}
             </td>
         </tr>
         <tr>
             <td colspan="4">
                 <label for="ftext">Текст сообщения</label>
-                {if $error=='ftext'}<span class="feedhighlight">Вы не ввели текст сообщения</span>{/if}
+                {if $error=='ftext'}
+                <span class="feedhighlight">Вы не ввели текст сообщения</span>
+                {/if}
             </td>
         </tr>
         <tr>
             <td colspan="4">
-                <textarea name="ftext" id="ftext" class="feedinput" style="width:98%;margin:0 10px;">{$ftext}</textarea>
+                <textarea name="ftext" id="ftext"
+                          class="feedinput"
+                          style="width:98%;margin:0 10px;">{$ftext}</textarea>
             </td>
         </tr>
         <tr>
-            <td colspan="4">Если вы хотите, чтобы мы связались с вами, оставьте свои контактные данные</td>
+            <td colspan="4">
+                Если вы хотите, чтобы мы связались с вами,
+                оставьте свои контактные данные.
+            </td>
         </tr>
         <tr>
             <td><label for="fmail">Электронная&nbsp;почта</label></td>
-            <td colspan="3"><input type="email" id="fmail" name="fmail" class="feedinput" value="{$fmail}" placeholder="ivan@ivanov.ru" style="width:50%" /></td>
+            <td colspan="3">
+                <input type="email" id="fmail" name="fmail"
+                       autocomplete="off"
+                       class="feedinput"
+                       value="{$fmail}"
+                       placeholder="ivan@ivanov.ru"
+                       style="width:50%" />
+            </td>
         </tr>
         <tr>
             <td colspan="4"><hr/></td>
         </tr>
         <tr>
-            <td rowspan="3" style="text-align: center;"><img id="norobotpic" src="/feedback/getcapt/" width="160" height="80" alt="Подтвердите, что вы не робот" /></td>
+            <td rowspan="3" style="text-align: center;">
+                <img id="norobotpic" src="/feedback/getcapt/"
+                     width="160" height="80"
+                     alt="Подтвердите, что вы не робот" />
+            </td>
             <td colspan="3">
-                {if $error=='fcapt'}<span class="feedhighlight">Вы ошиблись при вводе.</span>&nbsp;{/if}
-                Пожалуйста, введите символы изображенные на картинке слева. Регистр значения не имеет.
+                {if $error=='fcapt'}
+                <span class="feedhighlight">Вы ошиблись при вводе.</span>&nbsp;
+                {/if}
+                Пожалуйста, введите символы изображенные на картинке слева.
+                Регистр значения не имеет.
                 <br />
-                <a id="captchahelp" title="Нажать для перезагрузки картинки" href="#" style="text-decoration: none; border-bottom: 1px dotted #009FD4">Другую картинку?</a>
+                <a id="captchahelp" title="Нажать для перезагрузки картинки"
+                   href="#"
+                   style="text-decoration: none; border-bottom: 1px dotted #009FD4">Другую картинку?</a>
             </td>
         </tr>
         <tr>
             <td style="width:20%">Код с картинки</td>
-            <td><input type="text" id="fcapt" name="fcapt" class="feedinput" style="height:20px;width:60%" /></td>
+            <td>
+                <input type="text" id="fcapt" name="fcapt"
+                       autocomplete="off"
+                       class="feedinput"
+                       style="height:20px;width:60%" />
+            </td>
             <td>&nbsp;</td>
         </tr>
         <tr>
             <td colspan="3" style="text-align:center; padding: 5px">
-                <input type="submit" value="Отправить" class="feedinput" id="searchform_submit" style="width:auto" />
+                <input type="submit" value="Отправить" class="feedinput"
+                       id="searchform_submit"
+                       style="width:auto" />
             </td>
         </tr>
     </table>
