На форме обратной связи добавил пустое скрытое поле как ловушку

--- a/templates/feedback/feedpage.sm.html
+++ b/templates/feedback/feedpage.sm.html
@@ -85,6 +85,7 @@
         </tr>
         <tr>
             <td colspan="3" style="text-align:center; padding: 5px">
+                <input type="text" name="fsurname" id="feedback-form-surname" value="" />
                 <input type="submit" value="Отправить" class="feedinput"
                        id="searchform_submit"
                        style="width:auto" />
@@ -97,3 +98,9 @@
     Нажимая кнопку &laquo;Отправить&raquo;, вы соглашаетесь со всеми пунктами
     <a href="/about/">&laquo;Пользовательского соглашения&raquo;</a>.
 </p>
+
+<style>
+    #feedback-form-surname {
+        display: none;
+    }
+</style>
