Сделал ссылку на форму добавления

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -77,7 +77,7 @@
                         <li class="navigate" id="mainmenu_item_1"><a href="/" title="Главная страница">Главная</a></li>
                         <li class="navigate" id="mainmenu_item_2"><a href="/city/" title="Города">Города</a></li>
                         <li class="navigate" id="mainmenu_item_3"><a href="/blog/" title="Блог проекта">Блог</a></li>
-                        <li class="navigate" id="mainmenu_item_4"><a href="/feedback/" title="Обратная связь">Отзыв</a></li>
+                        <li class="navigate" id="mainmenu_item_4"><a href="/feedback/newpoint/" title="Добавить объект">Добавить</a></li>
                         <li class="navigate" id="mainmenu_item_5"><a href="/about/" title="О проекте">О проекте</a></li>
                         <li id="mainmenu_item_6">
                             <form method="get" action="/search/">
