Исправил форматирование шаблона

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -72,21 +72,35 @@
                 <div id="mainmenu-container">
                     <ul id="mainmenu" class="menu_common">
                         <li id="mainmenu_item_0">
-                            <a href="/" title="Главная страница"><img src="/img/header/logo-sign-32.png" /></a>
+                            <a href="/" title="Главная страница">
+                                <img src="/img/header/logo-sign-32.png" />
+                            </a>
                         </li>
-                        <li class="navigate" id="mainmenu_item_1"><a href="/" title="Главная страница">Главная</a></li>
-                        <li class="navigate" id="mainmenu_item_2"><a href="/city/" title="Города">Города</a></li>
-                        <li class="navigate" id="mainmenu_item_3"><a href="/blog/" title="Блог проекта">Блог</a></li>
-                        <li class="navigate" id="mainmenu_item_4"><a href="/feedback/newpoint/" title="Добавить объект">Добавить</a></li>
-                        <li class="navigate" id="mainmenu_item_5"><a href="/about/" title="О проекте">О проекте</a></li>
+                        <li class="navigate" id="mainmenu_item_1">
+                            <a href="/" title="Главная страница">Главная</a>
+                        </li>
+                        <li class="navigate" id="mainmenu_item_2">
+                            <a href="/city/" title="Города">Города</a>
+                        </li>
+                        <li class="navigate" id="mainmenu_item_3">
+                            <a href="/blog/" title="Блог проекта">Блог</a>
+                        </li>
+                        <li class="navigate" id="mainmenu_item_4">
+                            <a href="/feedback/newpoint/" title="Добавить объект">Добавить</a>
+                        </li>
+                        <li class="navigate" id="mainmenu_item_5">
+                            <a href="/about/" title="О проекте">О проекте</a>
+                        </li>
                         <li id="mainmenu_item_6">
                             <form method="get" action="/search/">
                                 <input type="text" id="search_mainform_q" name="q" value="" placeholder="Поиск" />
                             </form>
                         </li>
-                        <li id="mainmenu_item_7"><a id="show_auth_form" href="/sign/in/" title="Вход" rel="nofollow">
+                        <li id="mainmenu_item_7">
+                            <a id="show_auth_form" href="/sign/in/" title="Вход" rel="nofollow">
                                 <img src="/img/elements/lock-32.png" />
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </header><!-- #header-->
