Добавил ключ API Яндекса

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -28,7 +28,8 @@
         <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
         <![endif]-->
         <script src='https://www.google.com/recaptcha/api.js'></script>
-        <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat"
+        <script type="text/javascript"
+                src="https://api-maps.yandex.ru/2.1/?apikey=74d288bb-04a5-43b1-bf52-e90eeccd2683&lang=ru_RU&coordorder=longlat"
                 defer="defer"></script>
         <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
         <script type="text/javascript" src="https://relap.io/api/v6/head.js?token=bcuyS0TAMs8ykpeS" async></script>
