Добавил ключ API Яндекса в админку

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -117,7 +117,9 @@
     </tr>
 </table>
 
-<script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat" defer="defer"></script>
+<script type="text/javascript"
+        src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat&apikey=74d288bb-04a5-43b1-bf52-e90eeccd2683"
+        defer="defer"></script>
 <script type="text/javascript" src="/js/admin/addpoint.js" defer="defer"></script>
 
 <style type="text/css">
