Добавил код adSence

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -49,6 +49,7 @@
 
             </script>
         {/if}
+        <script data-ad-client="ca-pub-2391029836221111" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         {literal}
