--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -110,6 +110,29 @@
     <div class="relap-content-city"></div>
     <p></p>
 
+    <p></p>
+    <!-- Yandex.RTB R-A-94073-3 -->
+    <div id="yandex_rtb_R-A-94073-3"></div>
+    <script type="text/javascript">
+        (function(w, d, n, s, t) {
+            w[n] = w[n] || [];
+            w[n].push(function() {
+                Ya.Context.AdvManager.render({
+                    blockId: "R-A-94073-3",
+                    renderTo: "yandex_rtb_R-A-94073-3",
+                    async: true
+                });
+            });
+            t = d.getElementsByTagName("script")[0];
+            s = d.createElement("script");
+            s.type = "text/javascript";
+            s.src = "//an.yandex.ru/system/context.js";
+            s.async = true;
+            t.parentNode.insertBefore(s, t);
+        })(this, this.document, "yandexContextAsyncCallbacks");
+    </script>
+    <p></p>
+
     {if $points_servo}
     <h2>Полезная информация</h2>
     <ul id="menu_type2" class="points_selector">
