Добавил блок контекстной рекламы на страницу региона

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -107,7 +107,13 @@
     </table>
 
     <p></p>
-    <div class="relap-content-city"></div>
+    <script>
+        (yaads = window.yaads || []).push({
+            id: "94073-4",
+            render: "#yandex_context_city"
+        });
+    </script>
+    <div id="yandex_context_city"></div>
     <p></p>
 
     {if $points_servo}
