--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -33,6 +33,7 @@
                 defer="defer"></script>
         <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
         <script type="text/javascript" src="https://relap.io/api/v6/head.js?token=bcuyS0TAMs8ykpeS" async></script>
+        <script type="text/javascript" src="https://yastatic.net/pcode-native/loaders/loader.js" async></script>
         <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
         <script type="text/javascript" src="https://cdn.ravenjs.com/3.8.0/raven.min.js" defer="defer"></script>
         {if $page->user.userid}
