Саджест объектов для простановки фотографий

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -39,7 +39,10 @@
 </div>
 <div id="flickr-objects-suggestions">
     <ul></ul>
+    <input type="button" id="flickr-objects-suggestions-refresh" value="Обновить" />
 </div>
+
+<hr />
 
 <div id="flickr-search">
     Перейти к карте для объекта
