--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -181,4 +181,4 @@
 <div id="yandex_sharer">
     <script type="text/javascript" src="https://yastatic.net/share/share.js" charset="utf-8" defer="defer"></script><div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir" data-yashareTheme="counter"></div>
 </div>
-<div id="yandex_ad_city"></div>
+<div id="yandex_ad_city" class="yandex_ad"></div>
